@@ -652,7 +652,7 @@
                     <child>
                       <object class="GtkTable" id="table_desk">
                         <property name="visible">True</property>
-                        <property name="n_rows">5</property>
+                        <property name="n_rows">6</property>
                         <property name="n_columns">2</property>
                         <property name="column_spacing">6</property>
                         <property name="row_spacing">3</property>
@@ -818,6 +818,38 @@
                           </packing>
                         </child>
 
+                        <!-- Desktop - Font -->
+                        <child>
+                          <object class="GtkLabel" id="label_font">
+                            <property name="visible">True</property>
+                            <property name="xalign">0</property>
+                            <property name="label" translatable="yes">Font:</property>
+                          </object>
+                          <packing>
+                            <property name="left_attach">0</property>
+                            <property name="right_attach">1</property>
+                            <property name="top_attach">3</property>
+                            <property name="bottom_attach">4</property>
+                            <property name="x_options">GTK_FILL</property>
+                            <property name="y_options"/>
+                          </packing>
+                        </child>
+
+                        <child>
+                          <object class="GtkButton" id="desk_font">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                          </object>
+                          <packing>
+                            <property name="left_attach">1</property>
+                            <property name="right_attach">2</property>
+                            <property name="top_attach">3</property>
+                            <property name="bottom_attach">4</property>
+                            <property name="x_options">GTK_FILL</property>
+                            <property name="y_options"/>
+                          </packing>
+                        </child>
+
                         <!-- Desktop - Margins -->
                         <child>
                           <object class="GtkFrame" id="frame5">
@@ -946,8 +978,8 @@
                           <packing>
                             <property name="left_attach">0</property>
                             <property name="right_attach">2</property>
-                            <property name="top_attach">3</property>
-                            <property name="bottom_attach">5</property>
+                            <property name="top_attach">4</property>
+                            <property name="bottom_attach">6</property>
                             <property name="y_options">GTK_SHRINK</property>
                           </packing>
                         </child>
